--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,7 @@
 third-place:
 - name: RIDI
-  role: Team Manager of UX Design, Digital Product Designer
-  date: 2015. JUN - Present
+  role: Digital Product Designer, Team Manager
+  date: 2015. JUN - 2020. DEC
 
 second-place:
 - name: 코딩하는 디자이너
