--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 permalink:      /:year-:month-:day/:title
 
 # Setup
-title:          Jihye Leee
+title:          Hongil Son
 baseurl:        ""
-url:            "http://www.jihyeleee.com"
+url:            "http://www.sonhl0723.github.io"
 
 # Assets
 sass:
@@ -17,12 +17,12 @@ markdown:       kramdown
 # About
 author:
   name:         Jihye Leee
-  url:          http://jihyeleee.com/
-  email:        iam.leejihye@gmail.com  
-  github:       iamleejihye
-  twitter:      playpingpong
+  url:          http://sonhl0723.github.io/
+  email:        sonhl0723@naver.com
+  github:       sonhl0723
+  twitter:      
 
 # Custom vars
 version:        3.4.1
 github:
-  repo:         https://github.com/iamleejihye/iamleejihye.github.io
+  repo:         https://github.com/sonhl0723/sonhl0723.github.io
