--- a/_data/information.yml
+++ b/_data/information.yml
@@ -1,7 +1,7 @@
 third-place:
 - name: Email
   role: sonhl0723@naver.com
-  date: 2015. JUN - 2020. DEC
+  # date: 2015. JUN - 2020. DEC
 
 second-place:
 - name: Residence
