--- a/_data/multi-language.yml
+++ b/_data/multi-language.yml
@@ -1,7 +1,7 @@
 t:
   kr:
     a-designer-to-code:
-      name: "코딩하는 디자이너"
+      name: "손홍일"
   en:
     a-designer-to-code:
-      name: "A Designer to Code"
+      name: "Student"
