--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ sass:
 markdown:       kramdown
 
 # About
-author:
-  name:         Jihye Leee
+author:         
+  name:         Hongil
   url:          http://sonhl0723.github.io/
   email:        sonhl0723@naver.com
   github:       sonhl0723
